# Ridi-DRM-Remover

./: .gitignore  .prettierignore  .prettierrc.ts  LICENSE  LICENSE-APACHE  PLAN_gui.md  README.ko.md  README.md  package-lock.json  package.json  pyproject.toml  ridi.py  ridi_types.py  ridi_utils.py  tsconfig.electron.json  tsconfig.json
.github/workflows/: build_and_release.yml
scripts/: add-extensions.ts  build-electron.ts  build.ts  start-electron.ts
src/: book.py  book.ts  build.py  crypto.py  crypto.ts  index.ts  main.py  metadata.py  metadata.ts  models.py  models.ts  table.py  table.ts  utils.py
src/cli/: index.ts  version.ts
src/cli/commands/: auth.ts  books.ts  export.ts
src/cli/utils/: logger.ts  terminal.ts  text.ts
src/core/auth/: app-auth-service.ts  auth-service.ts  types.ts
src/core/book/: book-info.ts  book-service.ts  library.ts  types.ts
src/core/config/: config-service.ts  types.ts
src/core/crypto/: decrypt.ts  export-service.ts  validation.ts
src/core/metadata/: extract.ts  sanitize.ts
src/gui/: main.ts  preload.ts
src/gui/renderer/: App.css  App.tsx  index.html
src/gui/renderer/components/: AuthWindow.tsx  BookList.tsx  ExportDialog.tsx
src/gui/renderer/hooks/: useRidiService.ts
src/gui/services/: ipc-handlers.ts
src/shared/: constants.ts
