[project]
name = "ridi-drm-remover"
version = "0.2.0"
description = "A CLI tool to decrypt purchased and downloaded ebooks from Ridibooks, converting them into DRM-free files (EPUB/PDF)."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "cryptography>=46.0.5",
    "pypdf>=6.7.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pyinstaller>=6.18.0",
    "ruff>=0.15.0",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.14"
reportUnusedCallResult = "none"
extraPaths = ["src"]
reportImplicitRelativeImport = false
